<resources>
    <string name="app_name">SnapStory</string>
    <string name="tv_title_onboarding_first">Let\'s share your</string>
    <string name="tv_title_onboarding_second">stories with</string>
    <string name="tv_title_onboarding_third">SnapStory!</string>
    <string name="iv_sparkle">Sparkle accent</string>
    <string name="iv_highlight">Highlight accent</string>
    <string name="tv_desc_onboarding">Snap, share, and connect. Bring your stories to life \nand share them with friends. It’s free!</string>
    <string name="btn_signup_onboarding">Sign up</string>
    <string name="btn_signin_onboarding">Sign in</string>
    <string name="iv_onboarding">Illustration memojis of friends connected by dashed circles, representing social connections</string>
    <string name="bg_accent">Background image featuring purple icons related to photography and creativity, including cameras, photos, and a pencil</string>
    <string name="tv_logo">SnapStory</string>
    <string name="iv_memojis">Row of memojis representing five diverse characters, each within a colored circular frame</string>
    <string name="tv_title_signin_first">Welcome back to</string>
    <string name="tv_title_signin_second">SnapStory</string>
    <string name="tv_desc_signin">Sign in with your email to continue snapping and sharing your stories with friends!</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="btn_signin">Sign in</string>
    <string name="tv_donthave_account">Don\'t have an account?</string>
    <string name="tv_signup">Sign up</string>
    <string name="email_required">Required</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="password_required">Required</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="tv_title_signup_first">Get started with</string>
    <string name="tv_title_signup_second">SnapStory</string>
    <string name="tv_desc_signup">Sign up now and start snapping and sharing your stories with friends!</string>
    <string name="btn_signup">Sign up</string>
    <string name="tv_have_account">Already have an account?</string>
    <string name="tv_signin">Sign in</string>
    <string name="input_name">Name</string>
    <string name="fill_all_fields">Please fill in all required fields</string>
    <string name="signup_success">Successfully created an account!</string>
    <string name="signup_failed">Unexpected error occurred when creating an account</string>
    <string name="input_error">Incorrect email or password, please try again</string>
    <string name="signin_success">Successfully sign in, enjoy SnapStory!</string>
    <string name="signin_failed">Unexpected error occurred when signing in</string>
    <string name="email_notfound">Email not found, please sign up</string>
    <string name="invalid_password_signin">Invalid password, please try again</string>
    <string name="email_already_taken">Email is already taken, please use different email</string>
    <string name="btn_post_story">Post story</string>
    <string name="btn_map">Map</string>
    <string name="btn_logout">Log out</string>
    <string name="btn_retry">Retry</string>
    <string name="tv_user_name">Name</string>
    <string name="tv_story_date">Wed, 12 June 2024</string>
    <string name="iv_story">Story</string>
    <string name="iv_post_story">The image of the story that will be posted</string>
    <string name="input_description">Add a description</string>
    <string name="btn_add_story">Add story</string>
    <string name="btn_close">Close</string>
    <string name="btn_capture">Capture image</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_switch">Switch camera</string>
    <string name="iv_preview_story">Preview Story</string>
    <string name="tv_story_description">Story description</string>
    <string name="story_detail_toolbar">Story detail</string>
    <string name="tv_loading">Loading, please wait…</string>
    <string name="permissions_granted">Permission request granted</string>
    <string name="permissions_denied">Permission request denied</string>
    <string name="failed_to_start_camera">Failed to start camera, please try again</string>
    <string name="failed_to_take_photo">Failed to take photo, please try again</string>
    <string name="camera_activity_tag">CameraActivity</string>
    <string name="postStory_success">Successfully post story!</string>
    <string name="postStory_failed">Failed to post story</string>
    <string name="image_empty">Please add an image</string>
    <string name="storyDetail_failed">Failed to show the story detail</string>
    <string name="title_activity_story_maps">StoryMapsActivity</string>
    <string name="story_location_failed">Failed to get story location</string>
    <string name="btn_maps">Story Maps</string>
    <string name="btn_localization">Change language</string>
    <string name="btn_location_permission">Location permission</string>
    <string name="location_enabled">Location enabled</string>
    <string name="location_disabled">Location disabled</string>

</resources>