...
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.example.snapstory.ui.customview.EmailInputEditText
                    android:id="@+id/input_email_signin"
                    style="@style/TextStyle.INPUT"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:hint="@string/input_email"
                    android:inputType="textEmailAddress"
                    tools:ignore="TextContrastCheck" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:errorEnabled="true">

                <com.example.snapstory.ui.customview.PasswordInputEditText
                    android:id="@+id/input_password_signin"
                    style="@style/TextStyle.INPUT"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    tools:ignore="TextContrastCheck" />
...
