...
        app:layout_constraintTop_toBottomOf="@id/main_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_story"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="8dp"
            android:paddingTop="16dp"
            android:paddingBottom="80dp"
            android:clipToPadding="false"
...
